# AlbionBot

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: craft_killboard.md
src/albionbot/: config.py  main.py
src/albionbot/modules/: bank.py  killboard.py  raids.py  tickets.py
src/albionbot/storage/: bank_db.py  store.py
src/albionbot/ui/: bank_views.py  raid_admin_views.py  raid_manage_views.py  raid_views.py
src/albionbot/utils/: discord.py  permissions.py  text.py  timeutil.py
tests/: test_albion_provider.py  test_backend_api_craft_profitability.py  test_backend_api_raid_open_permissions.py  test_bank_db_reconnect.py  test_command_bus.py  test_craft_items_daily_sync.py  test_craft_simulate_integration_sample.py  test_crafting_math.py  test_crafting_profile_persistence.py  test_crafting_simulator.py  test_dashboard_auth_login_force.py  test_dashboard_authorization_fallback.py  test_dashboard_cookie_security.py  test_dashboard_service_actions.py  test_dashboard_session_and_prefs.py  test_gameinfo_client_and_craft_logic.py  test_killboard_service.py  test_permissions.py  test_raid_command_queue.py  test_ticket_transcript_content.py
web/: API_CONTRACT.md  README.md
web/backend/: __init__.py  albion_provider.py  app.py  auth.py  authorization.py  command_bus.py  crafting.py  gameinfo_client.py  killboard.py  requirements.txt  schemas.py  services.py
web/backend/data/: fce_coefficients.json
web/backend/scripts/: upsert_focus_costs.py
web/dashboard/: next.config.js  package.json
web/dashboard/app/: layout.tsx  page.tsx  (+3 more)
(+13 files in other folders)
